hphp/hack/test/typecheck/xhp/generic_attr_constraint.php.exp
File "generic_attr_constraint.php", line 8, characters 15-17:
Invalid xhp value for attribute `:foo` in `:my-xhp` (Typing[4323])
  File "generic_attr_constraint.php", line 3, characters 15-15:
  `T` is a constrained type parameter
  File "generic_attr_constraint.php", line 3, characters 20-22:
  This type constraint is violated
  File "generic_attr_constraint.php", line 3, characters 20-22:
  Expected `num`
  File "generic_attr_constraint.php", line 8, characters 15-17:
  But got `string`
